# Alienator

./: .gitignore  CMakeLists.txt
generator/: main.cpp
src/: alienator.cpp  alienator.h  button.cpp  button.h  effect.cpp  effect.h  game.h  game_object.h  human.cpp  human.h  in_game_scene.cpp  in_game_scene.h  main.cpp  main_menu_scene.cpp  main_menu_scene.h  map.h  map_chooser_scene.cpp  map_chooser_scene.h  muzzle_flash_effect.cpp  muzzle_flash_effect.h  projectile.cpp  projectile.h  scene.h  scene_object.h  stdinc.h  weapon.cpp  weapon.h
